[metadata]
description = Ansible Vars Plugin for Hashicorp Vault
long_description = file: README.md
long_description_content_type = text/markdown
author = Graham Lee Bevan
author-email = graham.bevan@ntlworld.com
license = MIT
url = https://github.com/goethite/hashivault_vars
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
